--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,7 @@
 6. Euclid's Algorithm, https://en.wikipedia.org/wiki/Euclidean_algorithm, https://en.wikipedia.org/wiki/Extended_Euclidean_algorithm, http://e-maxx.ru/algo/extended_euclid_algorithm#3
 7. Legal Side of Open Source https://opensource.guide/legal/#why-do-people-care-so-much-about-the-legal-side-of-open-source
 8. Chinese Remainder Theorem
+9. Unsupervised learning
+10. SVM
+11. AdaBoost
+12. Deaggregation of time series data
